@@ -1,3 +1,8 @@
+2002-08-28 00:34  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/art/blit.m: Do basic gamma correction when rendering
+	text.
+
 2002-08-27 12:10  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/art/: Fix copyright notices.
